# indicator-sensors

./: .clang_complete  .cquery  .dir-locals.el  .gitignore  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac
data/: Makefile.am  indicator-sensors.appdata.xml.in  indicator-sensors.desktop.in  indicator-sensors.gschema.xml.in.in
icons/: Makefile.am
indicator-sensors/: Makefile.am  indicator-sensors.c  is-application.c  is-application.h  is-fan-sensor.c  is-fan-sensor.h  is-indicator.c  is-indicator.h  is-log.c  is-log.h  is-manager.c  is-manager.h  is-notify.c  is-notify.h  is-preferences-dialog.c  is-preferences-dialog.h  is-sensor-dialog.c  is-sensor-dialog.h  is-sensor.c  is-sensor.h  is-store.c  is-store.h  is-temperature-sensor.c  is-temperature-sensor.h
pixmaps/: Makefile.am
plugins/: Makefile.am
plugins/aticonfig/: Makefile.am  aticonfig.plugin  is-aticonfig-plugin.c  is-aticonfig-plugin.h
plugins/dbus/: Makefile.am  dbus.plugin  is-active-sensor-objectmanager.xml  is-active-sensor.xml  is-dbus-plugin.c  is-dbus-plugin.h  is-search-provider.ini
plugins/dynamic/: Makefile.am  dynamic.plugin  is-dynamic-plugin.c  is-dynamic-plugin.h
plugins/fake/: Makefile.am  fake.plugin  is-fake-plugin.c  is-fake-plugin.h
plugins/gsettings/: Makefile.am  gsettings.plugin  indicator-sensors.gschema.xml.in.in  indicator-sensors.sensor.gschema.xml.in.in  is-gsettings-plugin.c  is-gsettings-plugin.h
plugins/libnotify/: Makefile.am  is-libnotify-plugin.c  is-libnotify-plugin.h  libnotify.plugin
plugins/libsensors/: Makefile.am  is-libsensors-plugin.c  is-libsensors-plugin.h  libsensors.plugin
plugins/max/: Makefile.am  is-max-plugin.c  is-max-plugin.h  max.plugin
plugins/nvidia/: Makefile.am  is-nvidia-plugin.c  is-nvidia-plugin.h  nvidia.plugin
plugins/udisks/: Makefile.am  is-udisks-plugin.c  is-udisks-plugin.h  udisks.plugin
plugins/udisks2/: Makefile.am  is-udisks2-plugin.c  is-udisks2-plugin.h  udisks2.plugin
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  de.po  en_GB.po  eo.po  es.po  fr.po  gl.po  he.po  hr.po  hu.po  indicator-sensors.pot  it.po  ko.po  lt.po  nl.po  pl.po  ro.po  ru.po  sk.po  sr.po  tr.po  uk.po  zh_CN.po
snap/: snapcraft.yaml
src/: Makefile.am  indicator-sensors.c  is-fan-sensor.h  is-indicator.c  is-indicator.h  is-manager.c  is-manager.h  is-preferences-dialog.c  is-sensor-store.c  is-sensor-store.h  is-sensor.c  is-sensor.h  is-store.c  is-store.h  is-temperature-sensor.c  is-temperature-sensor.h  sensors-indicator.c  sensors-indicator.h
